Corrected the analyzer alignment on the page

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -6,10 +6,11 @@
 
 .gamepadDisplay {
     display: flex;
+    margin: auto;
     flex-direction: column;
     justify-content: center;
     align-items: stretch;
-    width: 100vw;
+    width: 100%;
     max-width: 140mm;
     padding: 1.5rem;
 }
